# image-classifier-api

./: .gitignore  Dockerfile  EXPERIMENTS.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: evaluate.yml
analysis/: compute_metrics.py  error_analysis.py
data/: remove_duplicates.ipynb
evaluation_results/: baseline_cm.npy  baseline_report.json  classification_report.json  comparison.json  confusion_matrix.npy  transfer_cm.npy  transfer_report.json
kt_logs/flower_tuning/: oracle.json
kt_logs/flower_tuning/trial_00/: trial.json
kt_logs/flower_tuning/trial_01/: trial.json
kt_logs/flower_tuning/trial_02/: trial.json
kt_logs/flower_tuning/trial_03/: trial.json
kt_logs/flower_tuning/trial_04/: trial.json
kt_logs/flower_tuning/trial_05/: trial.json
kt_logs/flower_tuning/trial_06/: trial.json
kt_logs/flower_tuning/trial_07/: trial.json
kt_logs/flower_tuning/trial_08/: trial.json
kt_logs/flower_tuning/trial_09/: trial.json
src/: compare_models.py  download_data.py  evaluate.py  train.py  train_transfer.py
src/api/: main.py  predictor.py  run.py
tests/: test_api.py  test_download.py
