[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "image-classifier-api"
version = "0.1.0"
description = "Flower image classification API"
authors = [{name = "Gabriel Julio"}]
requires-python = ">=3.12"
readme = "README.md"
dependencies = [
    "fastapi>=0.116.0",
    "uvicorn[standard]>=0.35.0",
    "pandas>=2.3",
    "numpy>=2.1",
    "pillow>=11.0",
    "tensorflow>=2.19",
    "scikit-learn>=1.7",
    "python-multipart",
    "matplotlib>=3.10",
    "keras-tuner>=1.4",
]